--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/compatible": "^1.0.2",
     "@ant-design/icons": "^4.1.0",
     "@babel/core": "7.9.0",
     "@babel/plugin-proposal-decorators": "^7.8.3",
@@ -12,18 +13,23 @@
     "@testing-library/user-event": "^7.1.2",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
-    "antd": "^4.1.4",
+    "animate.css": "^3.7.2",
+    "antd": "3.20.7",
     "axios": "^0.19.2",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
+    "bizcharts": "^4.0.2",
+    "bodymovin": "^4.13.0",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "draft-js": "^0.11.5",
+    "echarts": "^4.7.0",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
@@ -34,6 +40,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
+    "gsap": "^3.2.6",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
@@ -44,7 +51,10 @@
     "less": "^3.11.1",
     "less-loader": "^6.0.0",
     "mini-css-extract-plugin": "0.9.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "moment": "^2.24.0",
+    "nprogress": "^0.2.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -56,8 +66,12 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.5",
+    "react-loadable": "^5.5.0",
+    "react-nprogress": "^0.1.6",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "redux-persist": "^6.0.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
@@ -155,6 +169,9 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.13.0"
+    "babel-plugin-import": "^1.13.0",
+    "babel-preset-mobx": "^2.0.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2"
   }
 }
