--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv-expand": "5.1.0",
     "draft-js": "^0.11.5",
     "echarts": "^4.7.0",
+    "echarts-for-react": "^2.0.15-beta.1",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
@@ -64,6 +65,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-countup": "^4.3.3",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
