--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-nprogress": "^0.1.6",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
@@ -172,8 +173,10 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-mobx": "^2.0.0",
     "mobx": "^5.15.4",
-    "mobx-react": "^6.2.2"
+    "mobx-react": "^6.2.2",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
