--- a/src/jsconfig.json
+++ b/src/jsconfig.json
@@ -1,7 +1,7 @@
 {
+  "include": ["src"],
   "compilerOptions": {
     "experimentalDecorators": true,
     "baseUrl": "src"
-  },
-  "include": ["src"]
+  }
 }
